# momentum_backtester

./: .gitignore  CHANGELOG.md  CSV_FORMAT_UPDATE.md  DATA_FORMAT.md  DEPLOY.md  EDGE_CASES.md  INTERNSHIP_REPORT.md  Internship_Report_Momentum_Backtester.docx  SETUP.md  create_internship_report.py  pyproject.toml  requirements.txt  run_app.py  sample_data.csv  sample_data_formatted.csv  vercel.json
.streamlit/: config.toml
data/: raw_data_stale.csv  sample.csv  synthetic_daily_returns.csv  synthetic_data.py  synthetic_equity_curve.csv  synthetic_positions.csv  synthetic_trades.csv
src/app/: streamlit_app.py
src/core/: analytics.py  calendar.py  config.py  data_loader.py  engine.py  plotting.py  signals.py  strategy.py
tests/: test_analytics.py  test_calendar.py  test_engine.py  test_plotting.py  test_signals.py  test_strategy.py
