[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-momentum-backtester"
version = "0.1.0"
description = "A Streamlit-based financial backtesting application for momentum strategies"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.31.1",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "scipy==1.11.4",
    "plotly==5.18.0",
    "pydantic==2.5.0",
    "python-dateutil==2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
